<resources>
    <string name="app_name">ca2</string>
    <string name="button_addCloudJob">Add Cloud Job</string>
    <string name="hint_cloudjobTitle">Cloud Job Title</string>
    <string name="hint_cloudjobDescription">Description </string>
    <string name="menu_addCloudJob">Add</string>
    <string name="menu_cancelCloudJob">Cancel</string>
    <string name="menu_deleteCloudJob">Delete</string>
    <string name="enter_cloud_job_title"> Please enter a Cloud Job Title </string>
    <string name="save_cloud_job"> Save Cloud Job</string>
    <string name="delete_cloudJob">Delete Cloud Job (Icon)</string>
    <string name="calendar_picker">Choose Deadline</string>
    <string name="hint_replica">Replica Count: </string>
    <string name="duration_string">Duration (mins): </string>
    <string name="indefinite_duration">Indefinite: </string>
    <string name="searchbar_hint">Search Cloud Jobs...</string>
    <string name="cpu_dropdown">Choose CPU</string>
    <string name="ca_title">Cloud Scheduler App</string>
    <string-array name="cpu_types">
        <item>Micro</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="button_addImage"> Add Image </string>
    <string name="select_cloudjob_image">Select Cloud Job image</string>
    <string name="change_cloudjob_image">Change Cloud Job image</string>
    <string name="button_datacentre_location">Set Data Centre Location</string>
    <string name="title_activity_maps">Map of All Cloud Jobs</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_placemark_image">Select image</string>
    <string name="change_placemark_image">Change image</string>
    <string name="nav_open">Open nav</string>
    <string name="nav_close">Close nav</string>
    <string name="delete_cloudjob_message">
        Are you sure you want to delete this cloud job? This action cannot be undone.
    </string>
    <string name="delete">Delete</string>
</resources>